kubernetes/Deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redcycle
  labels:
    app: redcycle
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redcycle
  template:
    metadata:
      labels:
        app: redcycle
    spec:
      containers:
      - name: redcycle
        image: projectredcycle/redcycle-api:latest
        ports:
        - containerPort: 8000
          protocol: TCP
