kubernetes/Ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: redcycle-ingress
  namespace: drew-robert-site
spec:
  rules:
    - host: drewrobert.com
      http:
        paths:
          - path: /redcycle
            backend:
              serviceName: redcycle-service
              servicePort: redcycle-port
